# VA

./: .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  COPYING  COPYING.proto  LICENSE.md  README.md
doc/: CMakeLists.txt  copy_doc_to_va_website.bat.proto  doxyfile.in  doxygen.footer.html.in
logo/: LICENSE.md  README.md
